website/websites/u64q/code/knucleotide.1.scala.log

Fri, 06 Feb 2009 01:12:03 GMT

MAKE:
mv knucleotide.scala knucleotide.scala
mv: `knucleotide.scala' and `knucleotide.scala' are the same file
make: [knucleotide.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.7.3.final/bin/scalac -optimise knucleotide.scala
knucleotide.scala:98: error: type mismatch;
 found   : scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
 required: HashBag.this.Entry
         if (elemEquals(entryKey(bucket), elem)){
                                 ^
knucleotide.scala:99: error: value inc is not a member of scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
            bucket.inc
                   ^
knucleotide.scala:110: error: type mismatch;
 found   : scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
 required: HashBag.this.Entry
         if (elemEquals(entryKey(bucket), elem)){
                                 ^
knucleotide.scala:111: error: value value is not a member of scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
            return bucket.value
                          ^
four errors found
make: [knucleotide.scala_run] Error 1 (ignored)
4.63s to complete and log all make actions

COMMAND LINE:
 /usr/bin/java -server -Xbootclasspath/a:/usr/local/src/scala-2.7.3.final/lib/scala-library.jar knucleotide 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: knucleotide
Caused by: java.lang.ClassNotFoundException: knucleotide
	at java.net.URLClassLoader$1.run(URLClassLoader.java:200)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:188)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:306)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:276)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:251)
	at java.lang.ClassLoader.loadClassInternal(ClassLoader.java:319)
